--- a/index.html
+++ b/index.html
@@ -20,16 +20,6 @@
 					<h1><strong>I am Anitya Gangurde</strong>, a self-taught pythonista and a Deep Learning Enthusiast<br />
 					with interests in GANs and NLPs.</h1>
 				</div>
-				<div class="inner" style="align-content: left;">
-					<p>Following are some of my current skills 👇<br />
-					Skill Proficiency Level: 🟡 🟠 🔴<br />
-					▶️ Programming💻| Python 🔴 • R 🟡 <br />
-					▶️ Web & Database 💾| HTML 🟠 • CSS 🟠 • MySQL 🟠 • PostgreSQL 🟡 <br />
-					▶️ Frameworks 🖼| Pandas 🟠 • Numpy 🟠 • Scikit-Learn 🔴 • PyTorch 🟠 • TensorFlow (Keras) 🟡 <br />
-					▶️ Tech 👨‍💻| Git • VSCode • PyCharm • Sublime Text • Jupyter • Google Collab • Power BI • MS Office<br />
-					▶️ Soft Skills 👬| Communication • Presentation • Manners • Flexibility<br />
-					▶️ Work ethics 👷‍♂️| Figure out • Work hard and smart • Perfection<br /></p>
-				</div>
 			</header>
 
 		<!-- Main -->
@@ -41,43 +31,58 @@
 							<h2>Welcome to my portfolio website where you can find all my recent projects and certifications.</h2>
 						</header>
 						<p>Hello, I am Anitya. I like working with computers and using them to solve complex problems. That's why the field of Data Science is of particular interest to me as it combines both of these things, computers and critical problem-solving. Currently, I am still learning and understanding how all parts of data science come into play in the real world.</p>
+					<div class="inner" style="align-content: left;">
+					<h4>Following are some of my current skills 👇</h4>
+					<p>
+					▶️ Programming 💻 |  Python <br />
+					▶️ Web & Database 💾 |  HTML  •  CSS  •  MySQL  •  PostgreSQL <br />
+					▶️ ML Algorithms 👾 | Logistic Regression  •  SVM  •  XG-Boost  •  Decision Trees<br>
+					▶️ Libraries 📚 |  Pandas  •  Numpy  •  Scikit-Learn  •  Matplotlib  •  Seaborn<br>
+					▶️ Frameworks 🖼 |  PyTorch  •  TensorFlow (Keras) <br />
+					▶️ Deployment 📤 | Heroku<br>
+					▶️ Tech Stack 👨‍💻 |  Git  •  Power BI  •  MS Office Stack<br />
+					▶️ IDEs 🐱‍👤 |  VSCode  •  PyCharm  •  Sublime Text  •  Jupyter  •  Google Collab<br>
+					▶️ Soft Skills 👬 |  Communication  •  Presentation  •  Manners  •  Flexibility<br />
+					▶️ Work ethics 👷‍ |  Figure out  •  Work hard and smart  •  Perfection<br /></p>
+					<h4>Scroll to see more 👇</h4>
+				</div>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Recent Works</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://would-you-survive-titanic-2.herokuapp.com/"><img src="images/thumbs/titanic.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/would-you-survive-titanic-2.0"><h3>Would You Survive the Titanic disaster [Version 2.0]</h3></a>
-								<span class="label tag">Python</span><span class="label tag">Flask</span><span class="label tag">Scikit-Learn</span><span class="label deployed">Deployed</span><br>
+								<span class="label tag">Python</span><span class="label tag">Flask</span><span class="label tag">Scikit-Learn</span><span class="label deployed">Deployed</span><br><br>
 								<p>Continuing the work of a previous Flask project, here I trained multiple models and included multiple features to get more accurate predictions.
 									The models takes more number of features and gives a prediction.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://www.kaggle.com/anityagangurde/training-resnet34-on-gpu-99-41-accuracy"><img src="images/thumbs/fish.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<h3>Using ResNet34 on Fish Dataset</h3>
-								<span class="label tag">ResNet-34</span><span class="label tag">PyTorch</span><span class="label notebook">Notebook</span><br>
+								<span class="label tag">ResNet-34</span><span class="label tag">PyTorch</span><span class="label notebook">Notebook</span><br><br>
 								<p>In this project, I used a pretrained ResNet34 model to train the Fish Dataset on, which was taken from Kaggle.
 									I achieved an accuracy of 99.70% within around 8 minutes.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://www.kaggle.com/anityagangurde/bank-customer-churn-prediction-xgboost-gpu/notebook"><img src="images/thumbs/bank.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<h3>Banking Customer Churn Rate</h3>
-								<span class="label tag">XG-Boost</span><span class="label tag">EDA</span><span class="label tag">Scikit-Learn</span><span class="label notebook">Notebook</span><br>
+								<span class="label tag">XG-Boost</span><span class="label tag">EDA</span><span class="label tag">Scikit-Learn</span><span class="label notebook">Notebook</span><br><br>
 								<p>Banking Customer Churn Rate is a project in which the model determines whether customers will leave the bank given certain information about them.
 									I trained an XGBoost model on this customer dataset using cross-validation and hyper-tuned it to achieve an accuracy of 85.4% as compared to 81% and 75% on normal XGBoost model and Logistic Regression respectively.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://hr-analytics-will-someone-quit.herokuapp.com/"><img src="images/thumbs/hr1.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/HR-Analytics-Will-someone-quit"><h3>HR Analytics: Predict whether someone will quit</h3></a>
-								<span class="label tag">Python</span><span class="label tag">Flask</span><span class="label tag">SVM</span><span class="label deployed">Deployed</span><br>
+								<span class="label tag">Python</span><span class="label tag">Flask</span><span class="label tag">SVM</span><span class="label deployed">Deployed</span><br><br>
 								<p>This is a Flask api deployed on Heroku that uses Support Vector Machines with RBF to determine if someone will quit a job provided various information about that employee. I achieved an accuracy of around 77% during training for this model.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://would-you-survive-the-titanic.herokuapp.com/"><img src="images/thumbs/titanic.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/Would-You-Survive-Titanic"><h3>Would You Survive the Titanic disaster?</h3></a>
-								<span class="label tag">Python</span><span class="label tag">Flask</span><span class="label deployed">Deployed</span><br>
+								<span class="label tag">Python</span><span class="label tag">Flask</span><span class="label deployed">Deployed</span><br><br>
 								<p>The project is a Machine Learning api, deployed on Heroku, which implements Logistic Regression to predict whether you would survive the Titanic disaster. The api is made with Flask using python. The project includes a model to predict the survival given three inputs.</p>
 							</article>
 						</div>
