added download resume button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>I am Anitya Gangurde</strong>, a self-taught pythonista and a Deep Learning Enthusiast<br />
-					with interests in GANs and NLPs.</h1>
+					with interests in GANs and NLPs.</h1><br>
+					<a href="Resume.pdf" class="button" download>Download Resume</a>
 				</div>
 			</header>
 
