--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>I am Anitya Gangurde</strong>, a self-taught pythonista and a Deep Learning Enthusiast<br />
 					with interests in GANs and NLPs.</h1><br>
-					<a href="Anitya_Gangurde_Resume.pdf" class="button" download>Download Resume</a>
+					<a href="Anitya_Gangurde_Resume.pdf" class="button button-shadow button-zoom" download>Download Resume</a>
 				</div>
 			</header>
 
@@ -56,34 +56,34 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://would-you-survive-titanic-2.herokuapp.com/"><img src="images/thumbs/titanic.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/would-you-survive-titanic-2.0"><h3>Would You Survive the Titanic disaster [Version 2.0]</h3></a>
-								<span class="label tag">Python</span><span class="label tag">Flask</span><span class="label tag">Scikit-Learn</span><span class="label deployed">Deployed</span><br><br>
+								<span class="label tag shadow">Python</span><span class="label tag shadow">Flask</span><span class="label tag shadow">Scikit-Learn</span><span class="label deployed shadow">Deployed</span><br><br>
 								<p>Continuing the work of a previous Flask project, here I trained multiple models and included multiple features to get more accurate predictions.
 									The models takes more number of features and gives a prediction.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://www.kaggle.com/anityagangurde/training-resnet34-on-gpu-99-41-accuracy"><img src="images/thumbs/fish.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<h3>Using ResNet34 on Fish Dataset</h3>
-								<span class="label tag">ResNet-34</span><span class="label tag">PyTorch</span><span class="label notebook">Notebook</span><br><br>
+								<span class="label tag shadow">ResNet-34</span><span class="label tag shadow">PyTorch</span><span class="label notebook shadow">Notebook</span><br><br>
 								<p>In this project, I used a pretrained ResNet34 model to train the Fish Dataset on, which was taken from Kaggle.
 									I achieved an accuracy of 99.70% within around 8 minutes.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://www.kaggle.com/anityagangurde/bank-customer-churn-prediction-xgboost-gpu/notebook"><img src="images/thumbs/bank.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<h3>Banking Customer Churn Rate</h3>
-								<span class="label tag">XG-Boost</span><span class="label tag">EDA</span><span class="label tag">Scikit-Learn</span><span class="label notebook">Notebook</span><br><br>
+								<span class="label tag shadow">XG-Boost</span><span class="label tag shadow">EDA</span><span class="label tag shadow">Scikit-Learn</span><span class="label notebook shadow">Notebook</span><br><br>
 								<p>Banking Customer Churn Rate is a project in which the model determines whether customers will leave the bank given certain information about them.
 									I trained an XGBoost model on this customer dataset using cross-validation and hyper-tuned it to achieve an accuracy of 85.4% as compared to 81% and 75% on normal XGBoost model and Logistic Regression respectively.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://hr-analytics-will-someone-quit.herokuapp.com/"><img src="images/thumbs/hr1.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/HR-Analytics-Will-someone-quit"><h3>HR Analytics: Predict whether someone will quit</h3></a>
-								<span class="label tag">Python</span><span class="label tag">Flask</span><span class="label tag">SVM</span><span class="label deployed">Deployed</span><br><br>
+								<span class="label tag">Python</span><span class="label tag shadow">Flask</span><span class="label tag shadow">SVM</span><span class="label deployed shadow">Deployed</span><br><br>
 								<p>This is a Flask api deployed on Heroku that uses Support Vector Machines with RBF to determine if someone will quit a job provided various information about that employee. I achieved an accuracy of around 77% during training for this model.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://would-you-survive-the-titanic.herokuapp.com/"><img src="images/thumbs/titanic.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/Would-You-Survive-Titanic"><h3>Would You Survive the Titanic disaster?</h3></a>
-								<span class="label tag">Python</span><span class="label tag">Flask</span><span class="label deployed">Deployed</span><br><br>
+								<span class="label tag shadow">Python</span><span class="label tag shadow">Flask</span><span class="label deployed shadow">Deployed</span><br><br>
 								<p>The project is a Machine Learning api, deployed on Heroku, which implements Logistic Regression to predict whether you would survive the Titanic disaster. The api is made with Flask using python. The project includes a model to predict the survival given three inputs.</p>
 							</article>
 						</div>
@@ -95,14 +95,16 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://becominghuman.ai/how-to-approach-any-data-science-problem-4c658443fda0" class="image fit zoom read hover-shadow"><img src="images/fulls/blog1.jpg" alt="" /></a>
 								<h3>How to approach any Data Science problem?</h3>
+								<span class="label tag shadow">Machine Learning</span><span class="label article shadow">Blog</span>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://medium.com/geekculture/how-confusion-matrices-are-useful-in-machine-learning-9893f88b0283" class="image fit zoom read hover-shadow"><img src="images/fulls/blog2.jpg" alt="" /></a>
 								<h3>How confusion matrices are useful in Machine Leaning?</h3>
+								<span class="label tag shadow">Machine Learning</span><span class="label tag shadow">Statistics</span><span class="label article shadow">Blog</span>
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="https://anityagan9urde.medium.com/" class="button">View More</a></li>
+							<li><a href="https://anityagan9urde.medium.com/" class="button button-shadow button-zoom">View More On Medium</a></li>
 						</ul>
 					</section>
 				<!-- Four -->
