--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<img class="image avatar hover-shadow zoom" src="images/avatar.jpg" alt="" />
 					<h1><strong>I am Anitya Gangurde</strong>, a self-taught pythonista and a Deep Learning Enthusiast<br />
 					with interests in GANs and NLPs.</h1><br>
 					<a href="Anitya_Gangurde_Resume.pdf" class="button button-shadow button-zoom" download>Download Resume</a>
@@ -211,10 +211,10 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://www.twitter.com/anitropy_42/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.linkedin.com/in/anityagan9urde/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://anityagan9urde.medium.com/" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
-						<li><a href="https://www.github.com/anityagan9urde/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li class="button-zoom"><a href="https://www.twitter.com/anitropy_42/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li class="button-zoom"><a href="https://www.linkedin.com/in/anityagan9urde/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li class="button-zoom"><a href="https://anityagan9urde.medium.com/" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
+						<li class="button-zoom"><a href="https://www.github.com/anityagan9urde/" class="icon brands fa-github"><span class="label">Github</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Anitya Gangurde</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
