--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
 						<h2>Recent Works</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href=""><img src="images/thumbs/thatnlp.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+								<a href=""><h3>[INSERT NLP PROJECT TITLE]</h3></a>
+								<span class="label tag shadow">Python</span><span class="label tag shadow">Flask</span><span class="label tag shadow">NLP</span><span class="label deployed shadow">In Progress</span><br><br>
+								<p>This is an nlp project which detects user behaviour based on their info. This is still a work in progress.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href=""><img src="images/thumbs/guitar.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+								<h3>[Guitar Chord Detection]</h3>
+								<span class="label tag shadow">PyTorch</span><span class="label tag shadow">Librosa</span><span class="label deployed shadow">In Progress</span><br><br>
+								<p>This project involves an API which detects guitar chords while live playing. This is still a work in progress.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://would-you-survive-titanic-2.herokuapp.com/"><img src="images/thumbs/titanic.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/would-you-survive-titanic-2.0"><h3>Would You Survive the Titanic disaster [Version 2.0]</h3></a>
 								<span class="label tag shadow">Python</span><span class="label tag shadow">Flask</span><span class="label tag shadow">Scikit-Learn</span><span class="label deployed shadow">Deployed</span><br><br>
