--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@
 					<h4>Scroll to see more 👇</h4>
 				</div>
 					</section>
-
-				<!-- Two -->
-					<section id="two">
-						<h2>Recent Works</h2>
+					<section>
+						<h2>Currently working on</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href=""><img src="images/thumbs/thatnlp.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
@@ -65,6 +63,13 @@
 								<span class="label tag shadow">PyTorch</span><span class="label tag shadow">Librosa</span><span class="label deployed shadow">In Progress</span><br><br>
 								<p>This project involves an API which detects guitar chords while live playing. This is still a work in progress.</p>
 							</article>
+						</div>
+					</section>
+
+				<!-- Two -->
+					<section id="two">
+						<h2>Recent Works</h2>
+						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://would-you-survive-titanic-2.herokuapp.com/"><img src="images/thumbs/titanic.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/would-you-survive-titanic-2.0"><h3>Would You Survive the Titanic disaster [Version 2.0]</h3></a>
