--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 						<h2>Currently working on</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href=""><img src="images/thumbs/thatnlp.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
-								<a href=""><h3>[INSERT NLP PROJECT TITLE]</h3></a>
+								<a href="https://github.com/AnityaGan9urde/NLP-model"><img src="images/thumbs/thatnlp.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+								<h3>[INSERT NLP PROJECT TITLE]</h3>
 								<span class="label tag shadow">Python</span><span class="label tag shadow">Flask</span><span class="label tag shadow">NLP</span><span class="label deployed shadow">In Progress</span><br><br>
 								<p>This is an nlp project which detects user behaviour based on their info. This is still a work in progress.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href=""><img src="images/thumbs/guitar.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+								<a href="https://github.com/AnityaGan9urde/Guitar-chord-detection"><img src="images/thumbs/guitar.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<h3>[Guitar Chord Detection]</h3>
 								<span class="label tag shadow">PyTorch</span><span class="label tag shadow">Librosa</span><span class="label deployed shadow">In Progress</span><br><br>
 								<p>This project involves an API which detects guitar chords while live playing. This is still a work in progress.</p>
