--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 						<li class="button-zoom"><a href="https://www.github.com/anityagan9urde/" class="icon brands fa-github"><span class="label">Github</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Anitya Gangurde</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Anitya Gangurde</li><li>Design: <a href="http://html5up.net/strata">HTML5 UP</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
 					</ul>
 				</div>
 			</footer>
