--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+		a:link {
+		  color: #494949;
+		  background-color: transparent;
+		  text-decoration: none;
+		}
+		a:visited {
+		  color: pink;
+		  background-color: transparent;
+		  text-decoration: none;
+		}
+		a:hover {
+		  color: #393939;
+		  background-color: transparent;
+		  text-decoration: underline;
+		}
+		a:active {
+		  color: yellow;
+		  background-color: transparent;
+		  text-decoration: underline;
+		}
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -216,7 +238,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										anityagangurde01@gmail.com
+										<a href="mailto:anityagangurde01@gmail.com">anityagangurde01@gmail.com</a>
 									</li>
 								</ul>
 							</div>
