--- a/index.html
+++ b/index.html
@@ -124,7 +124,36 @@
 						</ul>
 					</section>
 					<section>
-						<h2>Currently working on</h2>
+						<h2>Data Analysis Projects</h2>
+						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/AnityaGan9urde/Bank-Customer-Analysis-and-Churn-Prediction"><img src="images/thumbs/bank.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+								<h3>Banking Customer Churn Rate</h3>
+								<span class="label tag shadow">XG-Boost</span><span class="label tag shadow">EDA</span><span class="label tag shadow">Scikit-Learn</span><span class="label notebook shadow">Notebook</span><br><br>
+								<p>Banking Customer Churn Rate is a project in which the model determines whether customers will leave the bank given certain information about them.
+									I trained an XGBoost model on this customer dataset using cross-validation and hyper-tuned it to achieve an accuracy of 85.4% as compared to 81% and 75% on normal XGBoost model and Logistic Regression respectively.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/AnityaGan9urde/Guitar-chord-detection"><img src="images/thumbs/anal.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+								<h3>Guitar Chord Detection API</h3>
+								<span class="label tag shadow">Python</span><span class="label tag shadow">Librosa</span><span class="label tag shadow">Django</span><span class="label deployed shadow">In Progress</span><br><br>
+								<p>This project involves a Django app which detects guitar chords while live playing. This is still a work in progress.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/AnityaGan9urde/Guitar-chord-detection"><img src="images/thumbs/guitar.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+								<h3>Guitar Chord Detection API</h3>
+								<span class="label tag shadow">Python</span><span class="label tag shadow">Librosa</span><span class="label tag shadow">Django</span><span class="label deployed shadow">In Progress</span><br><br>
+								<p>This project involves a Django app which detects guitar chords while live playing. This is still a work in progress.</p>
+							</article>
+							<div class='tableauPlaceholder' id='viz1640948784399' style='position: relative'>
+								<object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+									<param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Covid-Dashboard_16408930437180&#47;Story1' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1640948784399');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1169px';vizElement.style.height='877px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+						</div>
+					</section>
+
+				<!-- Two -->
+					<section id="two">
+						<h2>Machine Learning Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://news-segmentation.herokuapp.com/"><img src="images/thumbs/newstm.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
@@ -138,13 +167,6 @@
 								<span class="label tag shadow">Python</span><span class="label tag shadow">Librosa</span><span class="label tag shadow">Django</span><span class="label deployed shadow">In Progress</span><br><br>
 								<p>This project involves a Django app which detects guitar chords while live playing. This is still a work in progress.</p>
 							</article>
-						</div>
-					</section>
-
-				<!-- Two -->
-					<section id="two">
-						<h2>Recent Works</h2>
-						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://would-you-survive-titanic-2.herokuapp.com/"><img src="images/thumbs/titanic.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<a href="https://github.com/AnityaGan9urde/would-you-survive-titanic-2.0"><h3>Would You Survive the Titanic disaster [Version 2.0]</h3></a>
@@ -158,13 +180,6 @@
 								<span class="label tag shadow">ResNet-34</span><span class="label tag shadow">PyTorch</span><span class="label notebook shadow">Notebook</span><br><br>
 								<p>In this project, I used a pretrained ResNet34 model to train the Fish Dataset on, which was taken from Kaggle.
 									I achieved an accuracy of 99.70% within around 8 minutes.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/AnityaGan9urde/Bank-Customer-Analysis-and-Churn-Prediction"><img src="images/thumbs/bank.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
-								<h3>Banking Customer Churn Rate</h3>
-								<span class="label tag shadow">XG-Boost</span><span class="label tag shadow">EDA</span><span class="label tag shadow">Scikit-Learn</span><span class="label notebook shadow">Notebook</span><br><br>
-								<p>Banking Customer Churn Rate is a project in which the model determines whether customers will leave the bank given certain information about them.
-									I trained an XGBoost model on this customer dataset using cross-validation and hyper-tuned it to achieve an accuracy of 85.4% as compared to 81% and 75% on normal XGBoost model and Logistic Regression respectively.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://hr-analytics-will-someone-quit.herokuapp.com/"><img src="images/thumbs/hr1.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
