--- a/index.html
+++ b/index.html
@@ -127,23 +127,28 @@
 						<h2>Data Analysis Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/AnityaGan9urde/Bank-Customer-Analysis-and-Churn-Prediction"><img src="images/thumbs/bank.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
-								<h3>Banking Customer Churn Rate</h3>
-								<span class="label tag shadow">Pandas</span><span class="label tag shadow">Matplotlib</span><span class="label tag shadow">Seaborn</span><span class="label notebook shadow">Jupyter Notebook</span><br><br>
-								<p>Banking Customer Churn Rate is a project in which the model determines whether customers will leave the bank given certain information about them.
-									I trained an XGBoost model on this customer dataset using cross-validation and hyper-tuned it to achieve an accuracy of 85.4% as compared to 81% and 75% on normal XGBoost model and Logistic Regression respectively.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://public.tableau.com/app/profile/anitya.gangurde/viz/Covid-Dashboard_16408930437180/Story1"><img src="images/thumbs/covid.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<h3>Covid-19 Dashboard</h3>
 								<span class="label tag shadow">Tableau</span><span class="label tag shadow">MS-Excel</span><span class="label deployed shadow">Visualization</span><br><br>
-								<p>This project involves manipulating dataset on Excel and creating Tableau dashboards for the same.</p>
+								<p>This project involves manipulating dataset on <b>Excel</b> and creating <b>Tableau</b> dashboards for the same.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://public.tableau.com/app/profile/anitya.gangurde/viz/WorldwideCO2emissions_16402503766470/Story"><img src="images/thumbs/CO2.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<h3>CO2 emissions Tableau Story</h3>
 								<span class="label tag shadow">Tableau</span><span class="label tag shadow">MS-Excel</span><span class="label deployed shadow">Visualization</span><br><br>
 								<p>This project involves an analysis on World CO2 emissions from 1960 to 2011.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/AnityaGan9urde/Bank-Customer-Analysis-and-Churn-Prediction"><img src="images/thumbs/bank.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+								<h3>Banking Customer Churn Rate</h3>
+								<span class="label tag shadow">Pandas</span><span class="label tag shadow">Matplotlib</span><span class="label tag shadow">Seaborn</span><span class="label notebook shadow">Jupyter Notebook</span><br><br>
+								<p>Here, I performed extensive data cleaning and data wrangling tasks using Pandas. Did Exploratory Data Analysis using Matplolib and Seaborn to create charts and analyze the data in a Jupyter Notebook.
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://public.tableau.com/app/profile/anitya.gangurde/viz/WorldwideCO2emissions_16402503766470/Story"><img src="images/thumbs/CO2.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+								<h3>Census-2011 Analysis</h3>
+								<span class="label tag shadow">MySql</span><span class="label tag shadow">MS-Excel</span><span class="label deployed shadow">Visualization</span><br><br>
+								<p>This project involves an analysis using <b>SQL</b> and <b>MS-Excel</b> on Census data of India for the year 2011.</p>
 							</article>
 						</div>
 					</section>
@@ -177,6 +182,13 @@
 								<span class="label tag shadow">ResNet-34</span><span class="label tag shadow">PyTorch</span><span class="label notebook shadow">Notebook</span><br><br>
 								<p>In this project, I used a pretrained ResNet34 model to train the Fish Dataset on, which was taken from Kaggle.
 									I achieved an accuracy of 99.70% within around 8 minutes.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/AnityaGan9urde/Bank-Customer-Analysis-and-Churn-Prediction"><img src="images/thumbs/bank.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+								<h3>Banking Customer Churn Rate</h3>
+								<span class="label tag shadow">Pandas</span><span class="label tag shadow">Matplotlib</span><span class="label tag shadow">Seaborn</span><span class="label notebook shadow">Notebook</span><br><br>
+								<p>Banking Customer Churn Rate is a project in which the model determines whether customers will leave the bank given certain information about them.
+									I trained an XGBoost model on this customer dataset using <b>cross-validation</b> and <b>hyper-tuned</b> it to achieve an accuracy of 85.4% as compared to 81% and 75% on normal <b>XGBoost</b> model and <b>Logistic Regression</b> respectively.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://hr-analytics-will-someone-quit.herokuapp.com/"><img src="images/thumbs/hr1.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
